# stockcheats

./: .gitignore  package-lock.json  package.json
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  constants.ts  index.css  tauriIntegration.ts
frontend/src/api/: client.ts
frontend/src/components/: ApexChart.tsx  ControlPanel.tsx  DateRangeSelector.tsx  DetailView.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  RealtimePanel.tsx  ReportView.tsx  ResearchHub.tsx  Sidebar.tsx  StockList.tsx  TactileSwitch.tsx  WindowControls.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/data/: defaultStocks.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: authService.ts  reportService.ts  watchlistService.ts
frontend/src/types/: market.ts  report.ts  user.ts
frontend/src/utils/: indicators.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
