[package]
name = "apex-vision"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
path = "src/lib.rs"

[[bin]]
name = "apex-vision"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.10.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

